--- a/src/main/web/WEB-INF/application.properties
+++ b/src/main/web/WEB-INF/application.properties
@@ -3,8 +3,13 @@
 #spring.database.host=jdbc:mysql://101.101.219.152:3306/iot_bad_smell?serverTimezone=UTC
 
 spring.database.class=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-spring.database.host=jdbc:log4jdbc:mysql://101.101.219.152:3306/iot_bad_smell?serverTimezone=UTC
 
+#개발서버
+#spring.database.host=jdbc:log4jdbc:mysql://101.101.219.152:3306/iot_bad_smell?serverTimezone=UTC
+#spring.database.username=metis
+#spring.database.password=metisInfo2021!
 
-spring.database.username=metis
-spring.database.password=metisInfo2021!
+#실서버
+spring.database.host=jdbc:log4jdbc:mysql://49.50.172.217:3306/iot_bad_smell?serverTimezone=UTC
+spring.database.username=ent
+spring.database.password=Ent0131!
