1. 이력조회화면(이미지 삭제, 로우 클릭 시 색상 변경, 기타 에러 수정) 2.회원가입화면(취소버튼)

--- a/src/main/web/WEB-INF/application.properties
+++ b/src/main/web/WEB-INF/application.properties
@@ -1,8 +1,9 @@
 #DB
-#spring.database.class=com.mysql.jdbc.Driver
-#spring.database.host=jdbc:mysql://101.101.219.152:3306/iot_bad_smell?serverTimezone=UTC
+spring.database.class=com.mysql.jdbc.Driver
+spring.database.host=jdbc:mysql://101.101.219.152:3306/iot_bad_smell?serverTimezone=UTC
 
-spring.database.class=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+#spring.database.class=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+#spring.database.host=jdbc:log4jdbc:mysql://101.101.219.152:3306/iot_bad_smell?serverTimezone=UTC
 
 #개발서버
 #spring.database.host=jdbc:log4jdbc:mysql://101.101.219.152:3306/iot_bad_smell?serverTimezone=UTC
