#접수 이미지 API 관련 세팅 및 로직.

--- a/src/main/web/WEB-INF/web.xml
+++ b/src/main/web/WEB-INF/web.xml
@@ -47,16 +47,15 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
     <!-- 한글설정 END -->
+
     <filter>
-        <filter-name>MultipartFilter</filter-name>
+        <filter-name>multipartFilter</filter-name>
         <filter-class>org.springframework.web.multipart.support.MultipartFilter</filter-class>
     </filter>
-    <!-- Multipart 설정 -->
     <filter-mapping>
-        <filter-name>MultipartFilter</filter-name>
+        <filter-name>multipartFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
-    <!-- Multipart 설정 END -->
 
     <absolute-ordering />
 </web-app>
