1. application.properties 한글 깨짐 해결 2. main 화면 리스트 불러온 후 강제로 금악리로 지도 이동 3. 엑셀, 이력 쿼리 수정 4. main 화면 진입시 현재 한림읍 측정소의 미세먼지 데이터 불러옴 5. 악취 접수시 한림읍 미세먼지 데이터 조회하여 같이 등록

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,17 @@ server.ip=49.50.172.217
 #실서버
 server.path=/usr/local/apache-tomcat-9.0.50/webapps/iotBadSmellMonitoringWebImg/
 #### PATH INFO END ####
+
+#KT API LINK 인증 HOST/ID/PW/미세먼지데이터조회주기/측정소명 개발 서버
+#ktApiLink.host=https://common.tbapi.kt.com/airmap/airmapapi/v1.0/airqAvgVal
+#ktApiLink.id=AII9360055306CQDJIV
+#ktApiLink.password=TBK9360055306QQJDUV
+#ktApiLink.period=60
+#ktApiLink.airSensorCode=1911KT149
+
+#KT API LINK 인증 HOST/ID/PW/미세먼지데이터조회주기/측정소명 실서버
+ktApiLink.host=https://common.api.kt.com/airmap/airmapapi/v1.0/airqAvgVal
+ktApiLink.id=AII3520064821EOQHFS
+ktApiLink.password=SVK3520064821JXJGAO
+ktApiLink.period=60
+ktApiLink.airSensorCode=한림읍
