1. 2차년도 세팅

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,43 +1,68 @@
+#배포 환경 설정
+environment=develope
+#environment=test
+#environment=release
+
 #### DB INFO START ####
-#DB
-#spring.database.class=com.mysql.jdbc.Driver
-spring.database.class=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-#개발서버 DB
-#spring.database.host=jdbc:log4jdbc:mysql://101.101.219.152:3306/iot_bad_smell?serverTimezone=UTC
-#spring.database.username=metis
-#spring.database.password=metisInfo2021!
+#로컬 개발 DB
+develope.spring.database.class=com.mysql.jdbc.Driver
+develope.spring.database.host=jdbc:mysql://101.101.216.193:3306/iot_bad_smell?serverTimezone=UTC
+develope.spring.database.username=metis
+develope.spring.database.password=metisInfo2010@#@
+#테스트 서버 DB
+test.spring.database.class=com.mysql.jdbc.Driver
+test.spring.database.host=jdbc:mysql://101.101.216.193:3306/iot_bad_smell?serverTimezone=UTC
+test.spring.database.username=metis
+test.spring.database.password=metisInfo2010@#@
 #실서버 DB
-spring.database.host=jdbc:log4jdbc:mysql://49.50.172.217:3306/iot_bad_smell?serverTimezone=UTC
-spring.database.username=ent
-spring.database.password=Ent0131!
+release.spring.database.class=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+release.spring.database.host=jdbc:log4jdbc:mysql://49.50.172.217:3306/iot_bad_smell?serverTimezone=UTC
+release.spring.database.username=ent
+release.spring.database.password=Ent0131!
 #### DB INFO END ####
 
 #### IP INFO START ####
-#개발서버
-#server.ip=101.101.219.152
+#로컬서버
+develope.server.ip=localhost
+#테스트 서버
+test.server.ip=101.101.216.193
 #실서버
-server.ip=49.50.172.217
+release.server.ip=49.50.172.217
 #### IP INFO END ####
 
-#### PATH INFO START ####
+#### 파일업로드 PATH INFO START ####
 #재훈 로컬
-#server.path=upload/
-#개발서버
-#server.path=/opt/apache-tomcat-9.0.45/webapps/iotBadSmellMonitoringWebImg/
+develope.server.path=/Users/joyuyeong/Desktop/upload/
+#테스트 서버
+test.server.path=/opt/apache-tomcat-9.0.45/webapps/iotBadSmellMonitoringWebImg/
 #실서버
-server.path=/usr/local/apache-tomcat-9.0.50/webapps/iotBadSmellMonitoringWebImg/
-#### PATH INFO END ####
+release.server.path=/usr/local/apache-tomcat-9.0.50/webapps/iotBadSmellMonitoringWebImg/
+#### 파일업로드 PATH INFO END ####
 
-#KT API LINK 인증 HOST/ID/PW/미세먼지데이터조회주기/측정소명 개발 서버
-#ktApiLink.host=https://common.tbapi.kt.com/airmap/airmapapi/v1.0/airqAvgVal
-#ktApiLink.id=AII9360055306CQDJIV
-#ktApiLink.password=TBK9360055306QQJDUV
-#ktApiLink.period=60
-#ktApiLink.airSensorCode=1911KT149
 
-#KT API LINK 인증 HOST/ID/PW/미세먼지데이터조회주기/측정소명 실서버
-ktApiLink.host=https://common.api.kt.com/airmap/airmapapi/v1.0/airqAvgVal
-ktApiLink.id=AII3520064821EOQHFS
-ktApiLink.password=SVK3520064821JXJGAO
-ktApiLink.period=60
-ktApiLink.airSensorCode=한림읍
+#### KT API LINK 인증 HOST/ID/PW/미세먼지데이터조회주기/측정소명 INFO START ####
+#로컬 개발용
+develope.ktApiLink.host=https://common.tbapi.kt.com/airmap/airmapapi/v1.0/airqAvgVal
+develope.ktApiLink.id=AII9360055306CQDJIV
+develope.ktApiLink.password=TBK9360055306QQJDUV
+develope.ktApiLink.period=60
+develope.ktApiLink.airSensorCode=1911KT149
+#테스트 서버
+test.ktApiLink.host=https://common.tbapi.kt.com/airmap/airmapapi/v1.0/airqAvgVal
+test.ktApiLink.id=AII9360055306CQDJIV
+test.ktApiLink.password=TBK9360055306QQJDUV
+test.ktApiLink.period=60
+test.ktApiLink.airSensorCode=1911KT149
+#실서버
+release.ktApiLink.host=https://common.api.kt.com/airmap/airmapapi/v1.0/airqAvgVal
+release.ktApiLink.id=AII3520064821EOQHFS
+release.ktApiLink.password=SVK3520064821JXJGAO
+release.ktApiLink.period=60
+release.ktApiLink.airSensorCode=한림읍
+#### KT API LINK 인증 HOST/ID/PW/미세먼지데이터조회주기/측정소명 INFO END ####
+
+#### 카카오 앱 키 (좌표) START ###
+develope.kakaoAppKey=31eb4881990129126e189d5ee4ed5f3e
+test.kakaoAppKey=3b4561dd700f64e8fa55b3ced036b82e
+release.kakaoAppKey=4bcfea95a6c0fea34615b3ea4d5dd430
+#### 카카오 앱 키 (좌표) END ###
