1. 위치변환용 카카오앱키 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -61,8 +61,14 @@ release.ktApiLink.period=60
 release.ktApiLink.airSensorCode=한림읍
 #### KT API LINK 인증 HOST/ID/PW/미세먼지데이터조회주기/측정소명 INFO END ####
 
-#### 카카오 앱 키 (좌표) START ###
-develope.kakaoAppKey=31eb4881990129126e189d5ee4ed5f3e
-test.kakaoAppKey=3b4561dd700f64e8fa55b3ced036b82e
-release.kakaoAppKey=4bcfea95a6c0fea34615b3ea4d5dd430
-#### 카카오 앱 키 (좌표) END ###
+#### 카카오 앱 키 (지도용) START ###
+develope.kakaoMapKey=31eb4881990129126e189d5ee4ed5f3e
+test.kakaoMapKey=3b4561dd700f64e8fa55b3ced036b82e
+release.kakaoMapKey=4bcfea95a6c0fea34615b3ea4d5dd430
+#### 카카오 앱 키 (지도용) END ###
+
+#### 카카오 앱 키 (위치 변환용) START ###
+develope.kakaoLocationKey=KakaoAK 5b11580e8e9f5de578904519775834db
+test.kakaoLocationKey=KakaoAK 7031588ebaa7a412ab3ab8a866a478f1
+release.kakaoLocationKey=KakaoAK fef4dd9ff8eb954cfbfa50c162e335b2
+#### 카카오 앱 키 (위치 변환용) END ###
