--- a/pom.xml
+++ b/pom.xml
@@ -276,5 +276,17 @@
         </dependency>
         <!-- Commons FileUpload -->
 
+        <dependency>
+            <groupId>net.nurigo</groupId>
+            <artifactId>sdk</artifactId>
+            <version>4.1.3</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>4.9.3</version>
+        </dependency>
+
     </dependencies>
 </project>
