--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,8 @@ environment=develope
 
 #### DB INFO START ####
 #로컬 개발 DB
-develope.spring.database.class=com.mysql.jdbc.Driver
-develope.spring.database.host=jdbc:mysql://101.101.216.193:3306/iot_bad_smell?serverTimezone=UTC
+develope.spring.database.class=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+develope.spring.database.host=jdbc:log4jdbc:mysql://101.101.216.193:3306/iot_bad_smell?serverTimezone=UTC
 develope.spring.database.username=metis
 develope.spring.database.password=metisInfo2010@#@
 #테스트 서버 DB
