1. 악취 접수시 이미지 업로드 수정 (포트번호 properties로 변경)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,13 +21,16 @@ release.spring.database.username=ent
 release.spring.database.password=Ent0131!
 #### DB INFO END ####
 
-#### IP INFO START ####
+#### IP & PORT INFO START ####
 #로컬서버
 develope.server.ip=localhost
+develope.server.port=8080
 #테스트 서버
 test.server.ip=101.101.216.193
+test.server.port=8007
 #실서버
 release.server.ip=49.50.172.217
+release.server.port=8080
 #### IP INFO END ####
 
 #### 파일업로드 PATH INFO START ####
