1. 단일 메세지 전송 소스 정리

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -53,3 +53,9 @@ develope.kakaoLocationKey=KakaoAK 5b11580e8e9f5de578904519775834db
 test.kakaoLocationKey=KakaoAK 7031588ebaa7a412ab3ab8a866a478f1
 release.kakaoLocationKey=KakaoAK fef4dd9ff8eb954cfbfa50c162e335b2
 #### 카카오 앱 키 (위치 변환용) END ###
+
+#### solApi 키 (SMS/카카오톡 관련) START ###
+message.domain=https://api.solapi.com
+message.apiKey=NCSH8FAKZYEJHAL7
+message.apiSecretKey=H1NRVDMHC8NLJVKUTARL73MSEEUVQCH8
+#### solApi 키 (SMS/카카오톡 관련) END ###
