--- a/pom.xml
+++ b/pom.xml
@@ -254,6 +254,12 @@
             <version>2.8.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j-impl</artifactId>
+            <version>2.5</version>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/org.bgee.log4jdbc-log4j2/log4jdbc-log4j2-jdbc4 -->
         <dependency>
             <groupId>org.bgee.log4jdbc-log4j2</groupId>
