--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,20 @@
-#배포 환경 설정
+#\uBC30\uD3EC \uD658\uACBD \uC124\uC815
 environment=develope
 #environment=test
 #environment=release
 
 #### DB INFO START ####
-#로컬 개발 DB
+#\uB85C\uCEEC \uAC1C\uBC1C DB
 develope.spring.database.class=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-develope.spring.database.host=jdbc:log4jdbc:mysql://101.101.216.193:3306/iot_bad_smell?serverTimezone=UTC
+develope.spring.database.host=jdbc:log4jdbc:mysql://14.49.221.213:5002/iot_bad_smell?serverTimezone=UTC
 develope.spring.database.username=metis
-develope.spring.database.password=metisInfo2010@#@
-#테스트 서버 DB
+develope.spring.database.password=metisInfo2010!
+#\uD14C\uC2A4\uD2B8 \uC11C\uBC84 DB
 test.spring.database.class=com.mysql.jdbc.Driver
-test.spring.database.host=jdbc:mysql://101.101.216.193:3306/iot_bad_smell?serverTimezone=UTC
+test.spring.database.host=jdbc:mysql://14.49.221.213:5002/iot_bad_smell?serverTimezone=UTC
 test.spring.database.username=metis
-test.spring.database.password=metisInfo2010@#@
-#실서버 DB
+test.spring.database.password=metisInfo2010!
+#\uC2E4\uC11C\uBC84 DB
 release.spring.database.class=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 release.spring.database.host=jdbc:log4jdbc:mysql://49.50.172.217:3306/iot_bad_smell?serverTimezone=UTC
 release.spring.database.username=ent
@@ -22,43 +22,43 @@ release.spring.database.password=Ent0131!
 #### DB INFO END ####
 
 #### IP & PORT INFO START ####
-#로컬서버
+#\uB85C\uCEEC\uC11C\uBC84
 develope.server.ip=localhost
 develope.server.port=8080
-#테스트 서버
+#\uD14C\uC2A4\uD2B8 \uC11C\uBC84
 test.server.ip=101.101.216.193
 test.server.port=8007
-#실서버
+#\uC2E4\uC11C\uBC84
 release.server.ip=49.50.172.217
 release.server.port=8080
 #### IP INFO END ####
 
-#### 파일업로드 PATH INFO START ####
-#재훈 로컬
+#### \uD30C\uC77C\uC5C5\uB85C\uB4DC PATH INFO START ####
+#\uC7AC\uD6C8 \uB85C\uCEEC
 develope.server.path=/Users/joyuyeong/Desktop/upload/
-#테스트 서버
+#\uD14C\uC2A4\uD2B8 \uC11C\uBC84
 test.server.path=/opt/badSmell/apache-tomcat-9.0.58/webapps/iotBadSmellMonitoringWebImg/
-#실서버
+#\uC2E4\uC11C\uBC84
 release.server.path=/usr/local/apache-tomcat-9.0.50/webapps/iotBadSmellMonitoringWebImg/
-#### 파일업로드 PATH INFO END ####
+#### \uD30C\uC77C\uC5C5\uB85C\uB4DC PATH INFO END ####
 
-#### 카카오 앱 키 (지도용) START ###
+#### \uCE74\uCE74\uC624 \uC571 \uD0A4 (\uC9C0\uB3C4\uC6A9) START ###
 develope.kakaoMapKey=31eb4881990129126e189d5ee4ed5f3e
 test.kakaoMapKey=3b4561dd700f64e8fa55b3ced036b82e
 release.kakaoMapKey=4bcfea95a6c0fea34615b3ea4d5dd430
-#### 카카오 앱 키 (지도용) END ###
+#### \uCE74\uCE74\uC624 \uC571 \uD0A4 (\uC9C0\uB3C4\uC6A9) END ###
 
-#### 카카오 앱 키 (위치 변환용) START ###
+#### \uCE74\uCE74\uC624 \uC571 \uD0A4 (\uC704\uCE58 \uBCC0\uD658\uC6A9) START ###
 develope.kakaoLocationKey=KakaoAK 5b11580e8e9f5de578904519775834db
 test.kakaoLocationKey=KakaoAK 7031588ebaa7a412ab3ab8a866a478f1
 release.kakaoLocationKey=KakaoAK fef4dd9ff8eb954cfbfa50c162e335b2
-#### 카카오 앱 키 (위치 변환용) END ###
+#### \uCE74\uCE74\uC624 \uC571 \uD0A4 (\uC704\uCE58 \uBCC0\uD658\uC6A9) END ###
 
-#### solApi 키 (SMS/카카오톡 관련) START ###
+#### solApi \uD0A4 (SMS/\uCE74\uCE74\uC624\uD1A1 \uAD00\uB828) START ###
 message.domain=https://api.solapi.com
 message.apiKey=NCSYYBMV5FXBVSH3
 message.apiSecretKey=LN5WUDONLDXMSYY7M57FAQ83VONKTOLU
 message.pfId=KA01PF220321021206791uJDLtCduSye
 message.temperateId=KA01TP220322060743883QmPDI5blyA3
 message.fromNumber=0647566502
-#### solApi 키 (SMS/카카오톡 관련) END ###
+#### solApi \uD0A4 (SMS/\uCE74\uCE74\uC624\uD1A1 \uAD00\uB828) END ###
