개발 서버 경로 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #\uBC30\uD3EC \uD658\uACBD \uC124\uC815
-environment=develope
-#environment=test
+#environment=develope
+environment=test
 #environment=release
 
 #### DB INFO START ####
@@ -26,8 +26,8 @@ release.spring.database.password=Ent0131!
 develope.server.ip=localhost
 develope.server.port=8080
 #\uD14C\uC2A4\uD2B8 \uC11C\uBC84
-test.server.ip=101.101.216.193
-test.server.port=8007
+test.server.ip=14.49.221.213
+test.server.port=9999
 #\uC2E4\uC11C\uBC84
 release.server.ip=49.50.172.217
 release.server.port=8080
@@ -37,7 +37,7 @@ release.server.port=8080
 #\uC7AC\uD6C8 \uB85C\uCEEC
 develope.server.path=/Users/joyuyeong/Desktop/upload/
 #\uD14C\uC2A4\uD2B8 \uC11C\uBC84
-test.server.path=/opt/badSmell/apache-tomcat-9.0.58/webapps/iotBadSmellMonitoringWebImg/
+test.server.path=/opt/iotBadSmell/apache-tomcat-9.0.60/webapps/iotBadSmellMonitoringWebImg/
 #\uC2E4\uC11C\uBC84
 release.server.path=/usr/local/apache-tomcat-9.0.50/webapps/iotBadSmellMonitoringWebImg/
 #### \uD30C\uC77C\uC5C5\uB85C\uB4DC PATH INFO END ####
