운영 배포 완료

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #\uBC30\uD3EC \uD658\uACBD \uC124\uC815
 #environment=develope
-environment=test
-#environment=release
+#environment=test
+environment=release
 
 #### DB INFO START ####
 #\uB85C\uCEEC \uAC1C\uBC1C DB
